# ros2_ws2

./: .gitignore  README.md  test1.md  test2.md
src/diagnostic_system/: package.xml  setup.cfg  setup.py
src/interview_interfaces/: CMakeLists.txt  package.xml
src/interview_interfaces/action/: Navigate.action
src/interview_interfaces/msg/: SensorData.msg
src/interview_interfaces/srv/: DiagnosticCheck.srv
src/navigation_system/: package.xml  setup.cfg  setup.py
src/robot_control/: CMakeLists.txt  package.xml  setup.py
src/robot_control/action/: MoveRobot.action
src/robot_control/launch/: robot_contorl.launch.py  robot_system.launch.py
src/robot_control/msg/: RobotStatus.msg
src/robot_control/robot_control/: move_command.py  robot_monitor.py  robot_state_publisher.py  state_controller.py
src/robot_control/robot_control/nodes/: robot_monitor.py  robot_mover.py  robot_state_publisher.py  state_controller.py
src/robot_control/scripts/: move_command.py  move_commander.py  robot_mover.py  robot_state_publisher.py
src/robot_control/srv/: ChangeState.srv
src/robot_core/: package.xml  setup.py
src/robot_interfaces/: package.xml  setup.py
src/sensor_system/: package.xml  setup.cfg  setup.py
